tests/NormalTests/paczka1/small_fuzzy/73287803.err
Error in line 6: lXLwpl3 S892 30,6
Error in line 8: lXLwpl3 A599 26,8
Error in line 9: UZJD S892 42,9
